# src/main/java/de/uol/pgdoener/th1/api/validation/ValidStructureValidator.java
@@ -16,13 +16,14 @@ public class ValidStructureValidator implements ConstraintValidator<ValidStructu
         ConverterTypeDto converterType = structure.getConverterType();
 
         return switch (converterType) {
-            case REMOVE_GROUPED_HEADER -> structure.getStartRow().isPresent() && structure.getEndRow().isPresent()
-                    && structure.getStartColumn().isPresent() && structure.getEndColumn().isPresent()
-                    && structure.getRowIndex() != null && !structure.getRowIndex().isEmpty()
-                    && structure.getColumnIndex() != null && !structure.getColumnIndex().isEmpty();
-            case FILL_EMPTY_CELLS -> structure.getRowIndex() != null && !structure.getRowIndex().isEmpty();
+            case REMOVE_GROUPED_HEADER -> structure.getRowIndex() != null
+                    && !structure.getRowIndex().isEmpty()
+                    && structure.getColumnIndex() != null
+                    && !structure.getColumnIndex().isEmpty();
+            case FILL_EMPTY_ROW -> structure.getRowIndex() != null && !structure.getRowIndex().isEmpty();
             case REMOVE_COLUMN_BY_INDEX -> structure.getColumnIndex() != null && !structure.getColumnIndex().isEmpty();
             case REMOVE_ROW_BY_INDEX -> structure.getRowIndex() != null && !structure.getRowIndex().isEmpty();
+            case ADD_HEADER_NAME -> structure.getHeaderNames() != null && !structure.getHeaderNames().isEmpty();
             default -> false;
         };
     }
