# src/main/java/de/uol/pgdoener/th1/business/infrastructure/converterchain/ConverterChainService.java
@@ -9,13 +9,12 @@ import de.uol.pgdoener.th1.business.infrastructure.converterchain.core.structure
 import de.uol.pgdoener.th1.business.mapper.StructureMapper;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.csv.CSVFormat;
-import org.apache.commons.csv.CSVRecord;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.util.Iterator;
+import java.util.List;
 import java.util.Objects;
 
 @Slf4j
@@ -45,22 +44,32 @@ public class ConverterChainService {
     // TODO move to an input object
     private String[][] readCsvToMatrix(MultipartFile file, TableStructureDto tableStructure) throws IOException {
         try (BufferedReader reader = new BufferedReader(new InputStreamReader(file.getInputStream()))) {
-            int colLength = tableStructure.getEndRow();
-            int rowLength = tableStructure.getEndColumn();
+            List<String[]> rows = CSVFormat.EXCEL.builder()
+                    .setDelimiter(tableStructure.getDelimiter())
+                    .get()
+                    .parse(reader)
+                    .stream()
+                    .map(record -> record.stream().toArray(String[]::new))
+                    .toList();
+
+            int maxRow = rows.size();
+            int maxCol = rows.getFirst().length;
+
+            // Falls endRow oder endColumn nicht gesetzt sind, bestimmen wir die Größe dynamisch
+            int colLength = tableStructure.getEndRow().orElse(maxRow);
+            int rowLength = tableStructure.getEndColumn().orElse(maxCol);
+
+            // Matrix initialisieren
             String[][] matrix = new String[colLength][rowLength];
 
-            Iterable<CSVRecord> records = CSVFormat.EXCEL.builder()
-                    .setDelimiter(tableStructure.getDelimiter())
-                    .get().parse(reader);
-
-            Iterator<CSVRecord> iterator = records.iterator();
-            for (int i = 0; iterator.hasNext() && i < colLength; i++) {
-                CSVRecord r = iterator.next();
-                String[] row = r.stream().toArray(String[]::new);
-                System.arraycopy(row, 0, matrix[i], 0, rowLength);
+            // Daten in die Matrix kopieren
+            for (int i = 0; i < colLength && i < rows.size(); i++) {
+                System.arraycopy(rows.get(i), 0, matrix[i], 0, Math.min(rows.get(i).length, rowLength));
             }
+
             return matrix;
         }
     }
+
 
 }
