# src/main/java/de/uol/pgdoener/th1/business/mapper/StructureMapper.java
@@ -58,16 +58,14 @@ public abstract class StructureMapper {
                 yield new RemoveGroupedHeaderStructure(
                         structureDto.getColumnIndex().toArray(new Integer[0]),
                         structureDto.getRowIndex().toArray(new Integer[0]),
-                        structureDto.getStartRow().orElseThrow(() -> new IllegalArgumentException("Start row missing")),
-                        structureDto.getEndRow().orElseThrow(() -> new IllegalArgumentException("End row missing")),
-                        structureDto.getStartColumn().orElseThrow(() -> new IllegalArgumentException("Start column missing")),
-                        structureDto.getEndColumn().orElseThrow(() -> new IllegalArgumentException("End column missing"))
+                        structureDto.getStartRow().orElse(null),
+                        structureDto.getStartColumn().orElse(null)
                 );
-            case FILL_EMPTY_CELLS:
+            case FILL_EMPTY_ROW:
                 if (structureDto.getRowIndex().isEmpty()) {
                     throw new IllegalArgumentException("Rows missing");
                 }
-                yield new FillEmptyStructure(structureDto.getRowIndex().toArray(new Integer[0]));
+                yield new FillEmptyRowStructure(structureDto.getRowIndex().toArray(new Integer[0]));
             case REMOVE_COLUMN_BY_INDEX:
                 if (structureDto.getColumnIndex().isEmpty()) {
                     throw new IllegalArgumentException("Columns missing");
@@ -78,8 +76,13 @@ public abstract class StructureMapper {
                     throw new IllegalArgumentException("Rows missing");
                 }
                 yield new RemoveRowByIndexStructure(structureDto.getRowIndex().toArray(new Integer[0]));
-            case UNKNOWN_DEFAULT_OPEN_API: // This should never happen
-                throw new IllegalArgumentException("Unknown converterType");
+            case ADD_HEADER_NAME:
+                if (structureDto.getHeaderNames().isEmpty()) {
+                    throw new IllegalArgumentException("HeaderNames missing");
+                }
+                yield new HeaderRowStructure(structureDto.getHeaderNames().toArray(new String[0]));
+            case UNKNOWN_DEFAULT_OPEN_API:
+                yield null;
         };
     }
 
